--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@ env
 .vscode
 productStore/vite.config.js
 node_modules
-productStore/package.json
-productStore/node_modules
-productStore/.eslintrc.cjs
+productStore/
+!productStore/package.json
+!productStore/node_modules
+!productStore/.eslintrc.cjs
 manage.py
 vite.config.js
 
