--- a/productStore/package.json
+++ b/productStore/package.json
@@ -18,7 +18,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.13.0"
+    "react-router-dom": "^6.14.2",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
